# codereivew

./: .dockerignore  .gitignore  README.md  docker-compose.hub.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: cli.py  main.py
backend/app/analysis/: commit_analyzer.py
backend/app/analytics/: contributor.py  duck.py  period_report.py
backend/app/api/: analysis.py  auth.py  deps.py  jobs.py  projects.py  qa.py  security.py  settings.py  users.py  webhook.py  wiki.py
backend/app/auth/: identity.py  keys.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: schema.sql  session.py
backend/app/git/: history.py  repo.py  worktree.py
backend/app/llm/: client.py  embedder.py  registry.py
backend/app/parsing/: chunker.py  engine.py  graph_store.py  vectors.py
backend/app/qa/: retriever.py
backend/app/queue/: handlers.py  queue.py  result.py  worker.py
backend/app/reports/: weekly.py
backend/app/security/: scanner.py
backend/app/tests/: conftest.py  test_api.py  test_pipeline.py  test_queue.py  test_weekly_report.py
backend/app/wiki/: generator.py
backend/code-review/: .gitignore  README.md  docker-compose.yml
backend/code-review/backend/: Dockerfile
backend/code-review/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
backend/code_review_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/storage/: meta.sqlite  meta.sqlite.bak
backend/storage/graphs/cd/: main.sqlite
backend/storage/vectors/: memory-lancedb-pro-skill.sqlite
(+80 files in other folders)
