[project]
name = "code-review-backend"
version = "0.1.0"
description = "自动化代码 Review 平台后端 — FastAPI + SQLite + sqlite-vec + DuckDB"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.1",
    "duckdb>=0.10",
    "gitpython>=3.1",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "cryptography>=42.0",
    "code-review-graph>=2.3.6",
]

[project.scripts]
cr = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
# 图谱引擎:确认安装方式后取消注释(pip / git+https / 本地路径)
# engine = ["code-review-graph"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
